--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Julia West's Git Achievements <img src='http://www.gravatar.com/avatar/9dd5f2bc9a1a32a86db6e68f1f1907d4'/></h2>
-Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 104 points<br>
+Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 108 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -24,6 +24,7 @@ Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Presenter (Level 2)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -43,15 +44,15 @@ Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 241 status
-  89 diff
-  79 add
-  64 commit
-  43 push
+ 284 status
+ 104 diff
+  91 add
+  76 commit
+  52 push
   35 checkout
-   6 stash
+   8 stash
+   6 reset
    6 pull
-   5 reset
    5 log
    3 rm
    2 show
