--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Julia West's Git Achievements <img src='http://www.gravatar.com/avatar/9dd5f2bc9a1a32a86db6e68f1f1907d4'/></h2>
-Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 111 points<br>
+Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 118 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,29 +39,30 @@ Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Goldsmith (Level 4)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 308 status
- 117 diff
- 101 add
-  84 commit
-  56 push
-  45 checkout
-  10 stash
-   6 reset
-   6 pull
+ 336 status
+ 128 diff
+ 108 add
+  90 commit
+  64 push
+  54 checkout
+  14 stash
+   7 reset
+   7 pull
+   5 merge
    5 log
    4 rm
-   4 merge
+   3 cherry-pick
    2 show
    2 mv
    2 config
    1 rebase
-   1 cherry-pick
 </pre>
 <script type="text/javascript">
 function showLocked() {
